Fix not being able to view footer in photos page on iOS safari

--- a/assets/css/photos_section.css
+++ b/assets/css/photos_section.css
@@ -7,6 +7,7 @@ but hope Apple makes it better
 /* Ensure the body element scrolls. In Chrome it's the html element by default; in Safari it's body */
 html {
   overflow: hidden;
+  position: relative;
   height: 100%;
 }
 
